zmiana kolorów i loga aplikacji

--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -3,14 +3,14 @@
 <!-- Shadow layer -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#A9A9A9"/> <!-- Kolor cienia -->
+            <solid android:color="#0000CD"/> <!-- Kolor cienia -->
             <corners android:radius="70dp"/>
         </shape>
     </item>
     <!-- Główny przycisk -->
     <item android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#7CCC56"/> <!-- Kolor tła przycisku -->
+            <solid android:color="#4169E1"/> <!-- Kolor tła przycisku -->
             <corners android:radius="70dp"/>
         </shape>
     </item>
@@ -18,7 +18,7 @@
 <!-- Background layer -->
 <item android:bottom="4dp" android:left="0dp" android:right="3dp" android:top="1dp">
     <shape>
-        <solid android:color="#75F726" />
+        <solid android:color="#0000CD" />
         <corners android:radius="70dp" />
     </shape>
 </item>
