--- a/app/src/main/res/drawable/rounded_logo.xml
+++ b/app/src/main/res/drawable/rounded_logo.xml
@@ -1,5 +1,5 @@
 <!-- rounded_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#56DB05" /> <!-- Domyślny kolor tła -->
+    <solid android:color="#0000FF" /> <!-- Domyślny kolor tła -->
     <corners android:radius="30dp" /> <!-- Domyślne zaokrąglenie rogów -->
 </shape>
