--- a/app/src/main/res/layout/activity_dict.xml
+++ b/app/src/main/res/layout/activity_dict.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B9FA91"
+    android:background="	#87CEFA"
     tools:context=".DictActivity">
 
     <Button
@@ -74,23 +74,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.82" />
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="339dp"
-        android:layout_height="120dp"
-        android:autoText="false"
-        android:background="@drawable/rounded_logo"
-        android:fontFamily="@font/inter_bold"
-        android:gravity="center"
-        android:text="LangMaster"
-        android:textAlignment="center"
-        android:textColor="#A4EB79"
-        android:textSize="40sp"
-        android:textStyle="bold|italic"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="373dp"
+        android:layout_height="192dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintVertical_bias="0.005"
+        app:srcCompat="@drawable/backimg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
