--- a/app/src/main/res/layout/activity_vocabulary_learning.xml
+++ b/app/src/main/res/layout/activity_vocabulary_learning.xml
@@ -4,9 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B9FA91"
+    android:background="#87CEFA"
     android:paddingStart="10dp"
     tools:context=".LoginActivity">
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="373dp"
+        android:layout_height="192dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.005"
+        app:srcCompat="@drawable/backimg" />
 
     <Button
         android:id="@+id/accept"
@@ -22,10 +35,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.573"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintVertical_bias="0.821" />
 
     <Button
         android:id="@+id/btn_Powrot2"
@@ -48,7 +61,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText7"
-        android:layout_width="346dp"
+        android:layout_width="340dp"
         android:layout_height="70dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/freeman"
@@ -92,7 +105,7 @@
         android:layout_height="67dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/luckiestguy"
-        android:shadowColor="#56DB05"
+        android:shadowColor="#0000FF"
         android:shadowDx="5"
         android:shadowDy="5"
         android:shadowRadius="1.6"
@@ -107,26 +120,7 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="339dp"
-        android:layout_height="120dp"
-        android:autoText="false"
-        android:background="@drawable/rounded_logo"
-        android:fontFamily="@font/inter_bold"
-        android:gravity="center"
-        android:text="LangMaster"
-        android:textAlignment="center"
-        android:textColor="#A4EB79"
-        android:textSize="40sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintVertical_bias="0.282" />
 
     <Spinner
         android:id="@+id/spinner2"
@@ -141,10 +135,10 @@
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintHorizontal_bias="0.605"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.381" />
+        app:layout_constraintVertical_bias="0.394" />
 
     <TextView
         android:id="@+id/textView4"
@@ -160,10 +154,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.381" />
+        app:layout_constraintVertical_bias="0.394" />
 
     <TextView
         android:id="@+id/word_pl"
@@ -186,7 +180,7 @@
 
     <TextView
         android:id="@+id/is_correct"
-        android:layout_width="367dp"
+        android:layout_width="340dp"
         android:layout_height="64dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/freeman"
