--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -1,5 +1,5 @@
 <!-- rounded_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#7CCC56" /> <!-- Domyślny kolor tła -->
+    <solid android:color="#4169E1" /> <!-- Domyślny kolor tła -->
     <corners android:radius="70dp" /> <!-- Domyślne zaokrąglenie rogów -->
 </shape>
