--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,15 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B9FA91"
+    android:background="#87CEFA"
     tools:context=".SettingsActivity">
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="373dp"
+        android:layout_height="192dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.005"
+        app:srcCompat="@drawable/backimg" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="256dp"
         android:layout_height="58dp"
         android:fontFamily="@font/luckiestguy"
-        android:shadowColor="#56DB05"
+        android:shadowColor="#0000FF"
         android:shadowDx="5"
         android:shadowDy="5"
         android:shadowRadius="1.6"
@@ -27,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.301" />
 
     <TableLayout
         android:id="@+id/tableLayout"
@@ -39,10 +51,10 @@
         android:paddingLeft="-60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.21">
+        app:layout_constraintVertical_bias="0.499">
 
         <TableRow
             android:layout_width="252dp"
@@ -56,7 +68,7 @@
                 android:fontFamily="@font/luckiestguy"
                 android:paddingStart="70dp"
                 android:paddingTop="10dp"
-                android:shadowColor="#56DB05"
+                android:shadowColor="#0000FF"
                 android:shadowDx="5"
                 android:shadowDy="5"
                 android:shadowRadius="1.6"
@@ -88,7 +100,7 @@
                 android:fontFamily="@font/luckiestguy"
                 android:paddingStart="70dp"
                 android:paddingTop="10dp"
-                android:shadowColor="#56DB05"
+                android:shadowColor="#0000FF"
                 android:shadowDx="5"
                 android:shadowDy="5"
                 android:shadowRadius="1.6"
@@ -121,7 +133,7 @@
                 android:fontFamily="@font/luckiestguy"
                 android:paddingStart="70dp"
                 android:paddingTop="10dp"
-                android:shadowColor="#56DB05"
+                android:shadowColor="#0000FF"
                 android:shadowDx="5"
                 android:shadowDy="5"
                 android:shadowRadius="1.6"
@@ -187,69 +199,6 @@
         app:layout_constraintVertical_bias="0.897" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="388dp"
-        android:layout_height="148dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/rounded_square"
-        android:orientation="vertical"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.565"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.559">
-
-        <TextView
-            android:id="@+id/motyw"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:fontFamily="@font/luckiestguy"
-            android:paddingLeft="15dp"
-            android:paddingTop="10dp"
-            android:shadowColor="#56DB05"
-            android:shadowDx="5"
-            android:shadowDy="5"
-            android:shadowRadius="1.6"
-            android:text="ZMIEŃ MOTYW:"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_Jasny"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/rounded_change_theme"
-            android:fontFamily="@font/luckiestguy"
-            android:text="JASNY"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btn_Ciemny"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/rounded_change_theme"
-            android:fontFamily="@font/luckiestguy"
-            android:text="CIEMNY"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="384dp"
         android:layout_height="111dp"
@@ -260,10 +209,10 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.801">
+        app:layout_constraintVertical_bias="0.777">
 
         <TextView
             android:id="@+id/jezyk"
@@ -272,7 +221,7 @@
             android:fontFamily="@font/luckiestguy"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
-            android:shadowColor="#56DB05"
+            android:shadowColor="#0000FF"
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="1.6"
