--- a/app/src/main/res/layout/translator_dropdown_spinner.xml
+++ b/app/src/main/res/layout/translator_dropdown_spinner.xml
@@ -2,9 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:textSize="16sp"
-    android:textColor="#FFFFFF"
-    android:background="#388E3C"
+    android:background="#4169E1"
+    android:fontFamily="@font/luckiestguy"
     android:gravity="center_vertical"
-    android:fontFamily="@font/luckiestguy"/>
+    android:padding="16dp"
+    android:textColor="#FFFFFF"
+    android:textSize="16sp" />
