--- a/app/src/main/res/layout/activity_dict.xml
+++ b/app/src/main/res/layout/activity_dict.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="POWRÓT"
+        android:text="@string/powrot"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:fontFamily="@font/luckiestguy"
         android:paddingStart="10dp"
         android:paddingTop="8dp"
-        android:text="WYBIERZ KATEGORIĘ "
+        android:text="@string/wybierz_kategorie"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
