--- a/app/src/main/res/layout/activity_trivia.xml
+++ b/app/src/main/res/layout/activity_trivia.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="POWRÓT"
+        android:text="@string/powrot"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="NASTĘPNA "
+        android:text="@string/nastepne"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -87,7 +87,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="POPRZEDNIA "
+        android:text="@string/poprzednie"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
