--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -1,21 +1,17 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<!-- Shadow layer -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#0000CD"/> <!-- Kolor cienia -->
+            <solid android:color="#0000CD"/>
             <corners android:radius="70dp"/>
         </shape>
     </item>
-    <!-- Główny przycisk -->
     <item android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#4169E1"/> <!-- Kolor tła przycisku -->
+            <solid android:color="#4169E1"/>
             <corners android:radius="70dp"/>
         </shape>
     </item>
-
-<!-- Background layer -->
 <item android:bottom="4dp" android:left="0dp" android:right="3dp" android:top="1dp">
     <shape>
         <solid android:color="#0000CD" />
