--- a/app/src/main/res/drawable/rounded_change_theme.xml
+++ b/app/src/main/res/drawable/rounded_change_theme.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F4D168" /> <!-- Domyślny kolor tła -->
-    <corners android:radius="18dp" /> <!-- Domyślne zaokrąglenie rogów -->
+    <solid android:color="#F4D168" />
+    <corners android:radius="18dp" />
 </shape>
