--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_height="52dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="ZALOGUJ SIĘ"
+        android:text="@string/zaloguj_sie"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -44,7 +44,11 @@
         android:layout_width="223dp"
         android:layout_height="82dp"
         android:fontFamily="@font/luckiestguy"
-        android:text="WITAMY!"
+        android:text="@string/witamy"
+        android:shadowColor="#0000FF"
+        android:shadowDx="7"
+        android:shadowDy="7"
+        android:shadowRadius="3"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
@@ -63,7 +67,7 @@
         android:background="@drawable/rounded_background"
         android:ems="10"
         android:fontFamily="@font/freeman"
-        android:hint="HASŁO:"
+        android:hint="@string/haslo"
         android:inputType="textPassword"
         android:paddingStart="25dp"
         android:textColor="#FFFFFF"
@@ -101,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/luckiestguy"
-        android:text="Nie masz konta? Zarejestruj się"
+        android:text="@string/rejestracja"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
