--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="TŁUMACZ"
+        android:text="@string/tlumacz"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="USTAWIENIA"
+        android:text="@string/ustawienia"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -92,7 +92,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.633"
+        app:layout_constraintHorizontal_bias="0.295"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.327" />
@@ -104,13 +104,17 @@
         android:fontFamily="@font/luckiestguy"
         android:paddingStart="10dp"
         android:paddingTop="8dp"
-        android:text="WYBIERZ Język "
+        android:shadowColor="#0000FF"
+        android:shadowDx="7"
+        android:shadowDy="7"
+        android:shadowRadius="3"
+        android:text="@string/wybierz_jezyk"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintHorizontal_bias="0.394"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.266" />
@@ -122,7 +126,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/luckiestguy"
-        android:text="SŁOWNIK"
+        android:text="@string/slownik"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +143,7 @@
         android:layout_marginStart="5dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/luckiestguy"
-        android:text="NAUKA SŁÓWEK"
+        android:text="@string/nauka_slowek"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -156,7 +160,7 @@
         android:layout_marginStart="5dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/luckiestguy"
-        android:text="ZDANIA"
+        android:text="@string/zdania"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -173,7 +177,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded_square"
         android:fontFamily="@font/luckiestguy"
-        android:text="CIEKAWOSTKI"
+        android:text="@string/ciekawostki"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
