--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="POWRÓT"
+        android:text="@string/powrot"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
         android:fontFamily="@font/freeman"
-        android:hint="IMIĘ:"
+        android:hint="@string/imie"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
         android:textColor="#000000"
@@ -108,7 +108,7 @@
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
         android:fontFamily="@font/freeman"
-        android:hint="NAZWISKO:"
+        android:hint="@string/nazwisko"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
         android:textColor="#000000"
@@ -129,7 +129,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="ZATWIERDŹ"
+        android:text="@string/zatwierdz"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -147,10 +147,10 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/luckiestguy"
         android:shadowColor="#0000FF"
-        android:shadowDx="5"
-        android:shadowDy="5"
-        android:shadowRadius="1.6"
-        android:text="UTWÓRZ KONTO"
+        android:shadowDx="7"
+        android:shadowDy="7"
+        android:shadowRadius="3"
+        android:text="@string/utworz_konto"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
@@ -169,7 +169,7 @@
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
         android:fontFamily="@font/freeman"
-        android:hint="HASŁO:"
+        android:hint="@string/haslo"
         android:includeFontPadding="true"
         android:inputType="textPassword"
         android:paddingStart="25dp"
