--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,10 +25,10 @@
         android:layout_height="58dp"
         android:fontFamily="@font/luckiestguy"
         android:shadowColor="#0000FF"
-        android:shadowDx="5"
-        android:shadowDy="5"
-        android:shadowRadius="1.6"
-        android:text="USTAWIENIA"
+        android:shadowDx="7"
+        android:shadowDy="7"
+        android:shadowRadius="3"
+        android:text="@string/ustawienia"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
@@ -39,22 +39,22 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.301" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="385dp"
         android:layout_height="174dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="13dp"
         android:background="@drawable/rounded_square"
         android:paddingLeft="-60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499">
+        app:layout_constraintVertical_bias="0.438">
 
         <TableRow
             android:layout_width="252dp"
@@ -104,7 +104,7 @@
                 android:shadowDx="5"
                 android:shadowDy="5"
                 android:shadowRadius="1.6"
-                android:text="IMIĘ:"
+                android:text="@string/imie"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
@@ -168,7 +168,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="WYLOGUJ SIĘ"
+        android:text="@string/wyloguj"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -187,7 +187,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="STRONA GŁÓWNA"
+        android:text="@string/strona_glowna"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -200,19 +200,19 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="384dp"
-        android:layout_height="111dp"
+        android:layout_width="385dp"
+        android:layout_height="110dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/rounded_square"
         android:orientation="vertical"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.777">
+        app:layout_constraintVertical_bias="0.749">
 
         <TextView
             android:id="@+id/jezyk"
@@ -225,26 +225,50 @@
             android:shadowDx="5"
             android:shadowDy="5"
             android:shadowRadius="1.6"
-            android:text="ZMIEŃ JĘZYK APLIKACJI:"
+            android:text="@string/zmien_jezyk"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
             android:textSize="22sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btn_Angielski"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/rounded"
-            android:fontFamily="@font/luckiestguy"
-            android:text="ANGIELSKI"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_Angielski"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="2.5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded"
+                android:fontFamily="@font/luckiestguy"
+                android:text="@string/angielski"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btn_Polski"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="2.5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded"
+                android:fontFamily="@font/luckiestguy"
+                android:text="@string/polski"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
