--- a/app/src/main/res/layout/activity_translator.xml
+++ b/app/src/main/res/layout/activity_translator.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="POWRÓT"
+        android:text="@string/powrot"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="Przetłumacz"
+        android:text="@string/przetlumacz"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -63,7 +63,7 @@
         android:layout_height="35dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
-        android:text="Tłumaczenie"
+        android:text="@string/tlumaczenie"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -88,7 +88,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.789" />
@@ -108,7 +108,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.554" />
@@ -119,7 +119,7 @@
         android:layout_height="35dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
-        android:text="Wpisz zdanie do przetłumaczenia"
+        android:text="@string/wpisz_tekst"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,7 +135,7 @@
         android:layout_height="18dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
-        android:text="NA"
+        android:text="@string/na"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -152,7 +152,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
-        android:text="Z"
+        android:text="@string/z"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +166,7 @@
         android:layout_height="34dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
-        android:text="Wybierz Język"
+        android:text="@string/wybierz_jezyk"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
