--- a/app/src/main/res/layout/activity_trivia.xml
+++ b/app/src/main/res/layout/activity_trivia.xml
@@ -98,8 +98,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.873" />
 
-    <TextView
-        android:id="@+id/imageView"
+    <ImageView
+        android:id="@+id/Obraz"
         android:layout_width="284dp"
         android:layout_height="182dp"
         android:background="@drawable/rounded_background"
@@ -110,13 +110,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.373" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="240dp"
-        android:layout_height="174dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@drawable/rounded" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
