--- a/app/src/main/res/layout/activity_sentences.xml
+++ b/app/src/main/res/layout/activity_sentences.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/sentence"
         android:layout_width="340dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -59,14 +59,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.385" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0.557" />
-
     <Button
-        android:id="@+id/btn_Zatwierdz"
+        android:id="@+id/next"
         android:layout_width="138dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -85,7 +79,7 @@
         app:layout_constraintVertical_bias="0.869" />
 
     <Button
-        android:id="@+id/btn_Ustawienia"
+        android:id="@+id/prev"
         android:layout_width="138dp"
         android:layout_height="41dp"
         android:layout_marginStart="5dp"
@@ -125,7 +119,7 @@
         app:layout_constraintVertical_bias="0.285" />
 
     <Button
-        android:id="@+id/btn_Slownik"
+        android:id="@+id/option2"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -141,7 +135,7 @@
         app:layout_constraintVertical_bias="0.557" />
 
     <Button
-        android:id="@+id/btn_Slowka"
+        android:id="@+id/option1"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -157,7 +151,7 @@
         app:layout_constraintVertical_bias="0.557" />
 
     <Button
-        android:id="@+id/btn_Zdania"
+        android:id="@+id/option3"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
@@ -173,7 +167,7 @@
         app:layout_constraintVertical_bias="0.738" />
 
     <Button
-        android:id="@+id/btn_Ciekawostki"
+        android:id="@+id/option4"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
