--- a/app/src/main/res/layout/activity_sentences.xml
+++ b/app/src/main/res/layout/activity_sentences.xml
@@ -67,7 +67,7 @@
         android:layout_marginEnd="5dp"
         android:background="@drawable/rounded"
         android:fontFamily="@font/luckiestguy"
-        android:text="@string/next"
+        android:text="@string/nastepne"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
