--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.924" />
+        app:layout_constraintVertical_bias="0.868" />
 
     <TextView
         android:id="@+id/textView"
@@ -109,7 +109,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Ustawienia" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_Ustawienia"
+        app:layout_constraintVertical_bias="0.242" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
