--- a/app/src/main/res/layout/activity_translator.xml
+++ b/app/src/main/res/layout/activity_translator.xml
@@ -148,16 +148,16 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="27dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="66dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/luckyguy"
         android:gravity="center"
         android:text="@string/z"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.203"
+        app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -174,7 +174,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.263" />
+        app:layout_constraintVertical_bias="0.26999998" />
 
     <Spinner
         android:id="@+id/sourceLangSpinner"
