--- a/app/src/main/res/drawable/rounded_green.xml
+++ b/app/src/main/res/drawable/rounded_green.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#289F00" />  <!-- Example green color -->
+    <solid android:color="#289F00" />
     <corners android:radius="18dp" />
 </shape>
